deployments/k8s/server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ori-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: checkin-service.info
    http:
      paths:
      - path: /
        backend:
          serviceName: location-checkin-nodeport-service
          servicePort: 6666
